<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>angle_read</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1959627839@qq.com">why</maintainer>
  <license>Apache2.0</license>

  <depend>rclcpp</depend>
  <depend>can_tool</depend>
  <depend>servo_motor_interface</depend>
  <depend>servo_motor_control</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
